# madore

./: .gitignore  pyproject.toml  requirements.txt
madore/: __init__.py  cli.py  render.py  type_renderers.py
tests/: test_eval_block.py
